// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFabContainerComponent Rendering should render a yoo-fab-button inside a container 1`] = `
<yoo-fab-container
  class="hydrated"
  data-yoo-fab-container-host=""
  data-yoo-fab-container-slot=""
>
  
  
  
  
  
  
                    
  <yoo-fab-button
    class="hydrated"
    data-yoo-fab-button-host=""
  >
    
    <div
      class="fab-button"
      data-yoo-fab-button=""
    >
      <yoo-button
        class="fab icon-only"
        data-yoo-fab-button=""
        icon=""
        text=""
      />
    </div>
  </yoo-fab-button>
  
                
</yoo-fab-container>
`;

exports[`YooFabContainerComponent Rendering should render a yoo-fab-list with buttons inside a container 1`] = `
<yoo-fab-container
  class="hydrated"
  data-yoo-fab-container-host=""
  data-yoo-fab-container-slot=""
>
  
  
  
  
  
  
  
  
                    
  <yoo-fab-button
    class="hydrated"
    data-yoo-fab-button-host=""
  >
    
    <div
      class="fab-button"
      data-yoo-fab-button=""
    >
      <yoo-button
        class="fab icon-only"
        data-yoo-fab-button=""
        icon=""
        text=""
      />
    </div>
  </yoo-fab-button>
  
                        
  <yoo-fab-list>
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
  </yoo-fab-list>
  
                
</yoo-fab-container>
`;

exports[`YooFabContainerComponent Rendering should render multiple with buttons inside a container 1`] = `
<yoo-fab-container
  class="hydrated"
  data-yoo-fab-container-host=""
  data-yoo-fab-container-slot=""
>
  
  
  
  
  
  
  
  
  
  
  
  
                    
  <yoo-fab-button
    class="hydrated"
    data-yoo-fab-button-host=""
  >
    
    <div
      class="fab-button"
      data-yoo-fab-button=""
    >
      <yoo-button
        class="fab icon-only"
        data-yoo-fab-button=""
        icon=""
        text=""
      />
    </div>
  </yoo-fab-button>
  
                        
  <yoo-fab-list
    class="top hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
  >
    
    
    
    
    
    
    
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
  </yoo-fab-list>
  
                        
  <yoo-fab-list
    class="top hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
  >
    
    
    
    
    
    
    
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
  </yoo-fab-list>
  
                        
  <yoo-fab-list
    class="top hydrated"
    data-yoo-fab-list-host=""
    data-yoo-fab-list-slot=""
  >
    
    
    
    
    
    
    
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                            
    <yoo-fab-button
      class="hydrated"
      data-yoo-fab-button-host=""
    >
      
      <div
        class="fab-button fab-in-list"
        data-yoo-fab-button=""
      >
        <div
          class="list-button-container"
          data-yoo-fab-button=""
        >
          
          <yoo-button
            class="fab icon-only"
            data-yoo-fab-button=""
            icon=""
            text=""
          />
        </div>
      </div>
    </yoo-fab-button>
    
                        
  </yoo-fab-list>
  
                
</yoo-fab-container>
`;
